name:                dhek
version:             1.0.8
-- synopsis:
-- description:
-- license:
author:              Applicius
-- maintainer:
-- copyright:cab
category:            GUI
build-type:          Custom
cabal-version:       >=1.18

executable dhek
  if os(darwin)
    c-sources: darwin/AppDelegate.m darwin/util.m
    hs-source-dirs: . darwin
    main-is: darwin/main.m
  if os(windows)
    c-sources: win/util.c
    hs-source-dirs: . win
    main-is: win/main.c
  if !os(windows) && !os(darwin)
    hs-source-dirs: . unix
    main-is: Main.hs

  other-modules: Dhek.Launcher
                 Dhek.Action
                 Dhek.Engine
                 Dhek.Engine.Interpreter
                 Dhek.Engine.Type
                 Dhek.File
                 Dhek.Free
                 Dhek.Geometry
                 Dhek.GUI
                 Dhek.GUI.Action
                 Dhek.I18N
                 Dhek.Mode.Common.Draw
                 Dhek.Mode.Duplicate
                 Dhek.Mode.Normal
                 Dhek.Mode.Selection
                 Dhek.Property
                 Dhek.Selection
                 Dhek.Signal
                 Dhek.Version
                 Dhek.Types
                 Dhek.AppUtil
                 Dhek.Utils

  default-extensions:  TemplateHaskell
  build-depends:       base          == 4.7.*
                       --, gtk3         >= 0.12.5
                       --, poppler     == 0.12.3
                       , mtl         >= 2.1.2
                       --, cairo       >= 0.12.5
                       , filepath    >= 1.3.0    && < 1.3.1
                       , executable-path == 0.0.3
                       , aeson       == 0.7.*
                       , bytestring  >= 0.9.2.1  && < 0.11
                       , containers  >= 0.4.0    && < 0.6
                       , array       >= 0.4.0.1
                       , lens        == 4.2.*
                       , vector      >= 0.7.1
                       , free        >= 3.1.1    && < 5
                       , shakespeare >= 2.0.0    && < 2.1.0
                       , text
                       , Cabal == 1.18.*
                       , process
                       , recursion-schemes >= 4.1
                       , transformers >= 0.4

  if os(windows)
    ghc-options: -O2 -threaded -optl-mwindows -user-package-db -package cairo -package glib -package gio -package gtk3 -package poppler
  if os(darwin)
    ghc-options: -O2 -threaded -optl-ObjC++ -optl-mmacosx-version-min=10.9 -framework AppKit -user-package-db -package cairo -package glib -package gio -package gtk3 -package poppler
  if !os(windows) && !os(darwin)
    ghc-options: -O2 -threaded -user-package-db -package cairo -package glib -package gio -package gtk3 -package poppler

  default-language: Haskell2010
