name:                dhek
version:             1.0.12
-- synopsis:
-- description:
-- license:
author:              Applicius
-- maintainer:
-- copyright:cab
category:            GUI
build-type:          Custom
cabal-version:       >=1.18

library
    hs-source-dirs: resources
    c-sources: resources/align_horizontal_center.c
               resources/align_horizontal_left.c
               resources/align_horizontal_right.c
               resources/align_vertical_bottom.c
               resources/align_vertical_center.c
               resources/align_vertical_top.c
               resources/applidok.c
               resources/dialog_accept.c
               resources/distribute.c
               resources/distribute_create.c
               resources/distribute_vertical.c
               resources/draw_eraser.c
               resources/draw_rectangle.c
               resources/duplicate_rectangle.c
               resources/go_next.c
               resources/go_previous.c
               resources/mouse_normal.c
               resources/mouse_dup.c
               resources/mouse_selection.c
               resources/mouse_update.c
               resources/rectangular_selection.c
               resources/zoom_in.c
               resources/zoom_out.c

   build-depends: base == 4.7.*,
                  gtk  >= 0.12.4

   exposed-modules: Dhek.Resources
   default-extensions: CPP
   default-language: Haskell2010

executable dhek
  if os(darwin)
    c-sources: darwin/AppDelegate.m darwin/util.m
    hs-source-dirs: . darwin
    main-is: darwin/main.m
  if os(windows)
    c-sources: win/util.c
    hs-source-dirs: . win
    main-is: win/main.c
  if !os(windows) && !os(darwin)
    hs-source-dirs: . unix
    main-is: Main.hs

  other-modules: Dhek.Launcher
                 Dhek.Action
                 Dhek.Cartesian
                 Dhek.Engine
                 Dhek.Engine.Instr
                 Dhek.Engine.Runtime
                 Dhek.Engine.Type
                 Dhek.File
                 Dhek.Geometry
                 Dhek.GUI
                 Dhek.I18N
                 Dhek.Mode.Common.Draw
                 Dhek.Mode.Duplicate
                 Dhek.Mode.DuplicateKey
                 Dhek.Mode.Effect.Collision
                 Dhek.Mode.Normal
                 Dhek.Mode.Selection
                 Dhek.PDF.Inlined
                 Dhek.PDF.Type
                 Dhek.Property
                 Dhek.Selection
                 Dhek.Signal
                 Dhek.Version
                 Dhek.Types
                 Dhek.AppUtil
                 Dhek.Utils
                 Dhek.Widget.Type
                 Dhek.Widget.BlankDocument

  default-extensions:  TemplateHaskell
                       CPP

  build-depends:       base          == 4.7.*
                       , gtk         >= 0.12.4
                       , poppler     == 0.12.3
                       , mtl         >= 2.1.2
                       , cairo       >= 0.12.4
                       , filepath    >= 1.3.0    && < 1.3.1
                       , executable-path == 0.0.3
                       , aeson       == 0.7.*
                       , bytestring  >= 0.9.2.1  && < 0.11
                       , containers  >= 0.4.0    && < 0.6
                       , array       >= 0.4.0.1
                       , lens        == 4.1.*
                       , vector      >= 0.7.1
                       , shakespeare >= 2.0.0    && < 2.1.0
                       , text
                       , Cabal == 1.18.*
                       , process
                       , recursion-schemes >= 4.1
                       , glib
                       , dhek
                       , raw-strings-qq

  if os(windows)
    ghc-options: -O2 -Wall -Werror -optc-mms-bitfields -optl-mwindows
  if os(darwin)
    ghc-options: -O2 -Wall -Werror -threaded -optl-ObjC++ -optl-mmacosx-version-min=10.9 -framework AppKit
  if !os(windows) && !os(darwin)
    ghc-options: -O2 -Wall -Werror

  default-language: Haskell2010
